<resources>
    <string name="app_name">Sport predict </string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="password2">رمز عبور:</string>

    <string name="remmember_me">مرا به خاطر بسپار! </string>
    <string name="login">ورود</string>
    <string name="forgot_your_password">اطلاعات ورود را فراموش کرده اید؟ </string>
    <string name="do_not_have_a_account">تا حالا ثبت نام نکرده ام/</string>
    <string name="create_one">ثبت نام</string>
    <string name="l">L</string>
    <string name="live_predict">Live Predict</string>
    <string name="next">Next</string>
    <string name="do_have_an_account">آیا ثبت نام کرده اید؟/</string>
    <string name="_98">+98</string>
    <string name="todo">TODO</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="did_not_the_code">ایا کد فعال سازی را دریافت نکرده اید؟</string>
    <string name="resend_code">ارسال دوباره</string>
    <string name="sendcodetext">ما یک کد جهت فعال سازی به شماره 09184591468 ارسال کردیم!لطفا آن را وارد کنید.</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="confirm">تکرار رمز عبور</string>
    <string name="register">ثبت نام</string>
    <string name="registration_completed_successfully">Registration completed successfully!</string>
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="home">خانه</string>
    <string name="mehran_akbari">Mehran Akbari</string>
    <string name="this_week">This Week</string>
    <string name="all_time">All Time</string>
    <string name="shop">فروشگاه</string>
    <string name="ranking">رتبه</string>
    <string name="setting">تنظیمات</string>
    <string name="_5450">5450</string>
    <string name="score">امتیاز من</string>
    <string name="_23">23</string>
    <string name="rank">رتبه من</string>
    <string name="_5221">5221</string>
    <string name="_4870">4870</string>
    <string name="_3580">3580</string>
    <string name="_4">4</string>
    <string name="end">End</string>
    <string name="manchester">منچستر </string>
    <string name="_7">+7</string>
    <string name="_2500">2500</string>
    <string name="loading">درحال اتصال…</string>
    <string name="warning">هشدار!</string>
    <string name="please_enter_username">لطفا نام کاربری را وارد نمایید.</string>
    <string name="done">تایید</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_add">ثبت</string>
    <string name="change">Change</string>
    <string name="recovery_logininfo">بازیابی اطلاعات</string>
    <string name="upload">upload</string>
    <string name="_ok">تایید</string>
    <string name="ranking2">Ranking</string>
    <string name="_14_3054">14:3054</string>
    <string name="_1399_12_20">1399/12/20</string>
    <string name="_min44">دقیقه 44</string>
    <string name="number">number</string>
    <string name="_12">12</string>
    <string name="esteghlal">استقلال تاجیکستان</string>
    <string name="n_havaeiaraq">نیروی هوایی عراق</string>
    <string name="username2">نام کاربری:</string>
    <string name="_9184591468">9184591468</string>
    <string name="phonenumber2">شماره موبایل:</string>
    <string name="name2">نام پروفایل:</string>
    <string name="changeprofile">تغییر تصویر پروفایل</string>
    <string name="changeprofileimage">تغییر تصویر پروفایل</string>
    <string name="_5500">5500</string>
    <string name="_124">124</string>
    <string name="tablelegaue">جداول لیگ ها</string>
    <string name="todaymatch">بازی های امروز</string>
    <string name="kafsh">کفش</string>
    <string name="news">جدیترین</string>
    <string name="lowprice">ارزانترین</string>
    <string name="highprice">گرانترین</string>
    <string name="kafsh_juma">کفش ورزشی جوما</string>
    <string name="juma_n51">juma-n51</string>
    <string name="price">380,000,000</string>
    <string name="toman">تومان</string>
    <string name="badansazi">بدنسازی</string>
    <string name="showall">نمایش همه</string>
    <string name="mehranakbarinejhad">مهران اکبری نژاد</string>
    <string name="fa_setting">تنظیمات</string>
    <string name="chat_with_admin">گفتگو با فروشنده</string>
    <string name="mybuy">خریدهای من</string>
    <string name="mybasket">سبد خرید</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="searchview">جستجو</string>
    <string name="show_drawer_layout">show drawer layout</string>
    <string name="fa_shop">فروشگاه</string>
    <string name="airmax_2010_iran">AirMax-2010-Iran</string>
    <string name="_4_300_000">4,300,000</string>
    <string name="search">جستجو</string>
    <string name="fa_message">این یک پیغام می باشد.</string>
    <string name="login2">ورود</string>
    <string name="detailskala">مشخصات:</string>
    <string name="Add_basket_text">افزودن به سبد خرید</string>
    <string name="descriptions">توضیحات</string>
    <string name="size_t">سایز</string>
    <string name="large">خیلی بزرگ</string>
    <string name="minez">-</string>
    <string name="plus">+</string>
    <string name="nobasket">سبد خرید خالی می باشد.</string>
    <string name="completebye">تکمیل فرایند خرید</string>
    <string name="pricebye">مبلغ قابل پرداخت:</string>
    <string name="payment">پرداخت</string>
    <string name="ostan">استان</string>
    <string name="shahrestan">شهرستان</string>
    <string name="completeAddress">آدرس کامل</string>
    <string name="profilebuy">مشخصات خریدار</string>
    <string name="sorathesab">صورتحساب</string>
    <string name="typepayment">نحوه پرداخت </string>
    <string name="portbank">درگاه بانکی( فعال نمی باشد)</string>
    <string name="homepay">درب منزل</string>
    <string name="nointernetconnection">به اینترنت متصل نیستید</string>
    <string name="retryconnect">تلاش دوباره</string>
    <string name="successbuytitr">سفارش شما با موفقیت ثبت شد</string>
    <string name="codepeygiri">کد رهگیری:15421523231445</string>
    <string name="firstandlastnamekharidar">نام و نام خانوادگی:</string>
    <string name="datekharid">تاریخ:</string>
    <string name="typepay">نوع پرداخت:</string>
    <string name="datecurrent">1400/03/03</string>
    <string name="comback">برگشت</string>
    <string name="geran">گرانترین</string>
    <string name="newss">جدیدترین</string>
    <string name="arzan">ارزانترین</string>
    <string name="titrnewstext">نفشه یونایتد نگرفت حوله دخیا معجزه نکرد</string>
    <string name="newsdescripyiontext">از دست رفتن پنالتی داوید دخیا باعث شد ویارئال به قهرمانی لیگ اروپا برسد.</string>
    <string name="newsdate">1400/03/05 17:00</string>
    <string name="cristiano_ronalod">Cristiano Ronalod</string>
    <string name="_29">29</string>

    <string-array name="details">
        <item>جدیدترین</item>
        <item>ارزان ترین</item>
        <item>گرانترین</item>
    </string-array>


</resources>