<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    tools:context=".view.BuySuccessActivity">
    <View
        android:id="@+id/viewtitr"
        android:layout_width="match_parent"
        android:layout_height="320dp"
      android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/shapelinearbuyactivity"

       />
        <TextView
            android:id="@+id/txt_titr_SuccessBuyActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:fontFamily="@font/bmitra"
            android:textColor="#353535"
            android:layout_centerHorizontal="true"
           android:layout_below="@id/txt_text_date"
            android:layout_marginTop="5dp"
            android:text="@string/successbuytitr"
            />
        <ImageView
            android:id="@+id/img_success_successbuyactivity"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/success"
            android:layout_below="@id/txt_titr_SuccessBuyActivity"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/txt_code_peygiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:gravity="center"
        android:fontFamily="@font/bmitra"
        android:textColor="#232323"
        android:layout_centerHorizontal="true"
      android:layout_alignTop="@id/viewtitr"
        android:layout_marginTop="10dp"
        tools:text="@string/codepeygiri"
        />


        <TextView
            android:id="@+id/txt_text_namekharidar"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/bmitra"
            android:textColor="#353535"
            android:gravity="center"
           android:layout_alignParentEnd="true"
           android:layout_below="@id/txt_code_peygiri"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/firstandlastnamekharidar"
            />
    <TextView
        android:id="@+id/txt_namekharidar_successbuyactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/bmitra"
        android:textColor="#353535"
        android:gravity="right"
       android:layout_toStartOf="@id/txt_text_namekharidar"
        android:layout_below="@id/txt_code_peygiri"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:text="@string/mehranakbarinejhad"
        />
        <TextView
            android:id="@+id/txt_text_date"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:fontFamily="@font/bmitra"
            android:textColor="#353535"
           android:layout_alignParentEnd="true"
            android:layout_below="@id/txt_text_typepay"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/datekharid"
            />
    <TextView
        android:id="@+id/txt_date_successbuyactivity"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="right"
        android:fontFamily="@font/bmitra"
        android:textColor="#353535"
        android:layout_toStartOf="@id/txt_text_date"
        android:layout_below="@id/txt_text_typepay"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/datecurrent"
        />
  <TextView
            android:id="@+id/txt_text_typepay"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:fontFamily="@font/bmitra"
            android:textColor="#353535"
           android:layout_alignParentEnd="true"
      android:layout_below="@id/txt_text_namekharidar"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/typepay"
            />

    <TextView
        android:id="@+id/txt_typepay_successbuyactivity"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="right"
        android:fontFamily="@font/bmitra"
        android:textColor="#353535"
       android:layout_toStartOf="@id/txt_text_typepay"
        android:layout_below="@id/txt_text_namekharidar"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/homepay"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_below="@id/img_success_successbuyactivity"
        android:layout_margin="10dp"
        android:background="@drawable/shapebuttondetailsactivity"
        android:text="@string/comback"
        android:textSize="22sp"
        android:textColor="#FFFFFF"/>





</RelativeLayout>