<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginActivity"
    android:id="@+id/loginactivity_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logingradint"
    android:layout_marginTop="-135dp">

    <ImageView
        android:id="@+id/logo_validateactivity"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/todo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:src="@drawable/armlogo"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#5E6A7B"
        android:drawableEnd="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:fontFamily="@font/bmitrabold"
        android:hint="@string/username"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="#EAE3E3"
        android:textColorHint="#EDE9E9"
        android:textSize="19sp"
        android:layout_centerInParent="true"


        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#5E6A7B"
        android:drawableEnd="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:fontFamily="@font/bmitrabold"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="#EAE3E3"
        android:textColorHint="#EDE9E9"
        android:textSize="19sp"
        android:layout_below="@id/edt_username"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/loginbutton"
        android:textColor="#FFF"
        android:layout_below="@id/edt_password"
        />
    <CheckBox
        android:id="@+id/swch_remmemberme"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/remmember_me"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#FFF"
        android:layout_gravity="right"
        android:checked="true"
        android:fontFamily="@font/bmitrabold"
        android:layout_marginEnd="20dp"
        android:buttonTint="@drawable/checkboxbackground"
        android:layout_below="@id/btn_login"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"


        />

    <TextView
        android:id="@+id/txt_revovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#03A9F4"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/bmitrabold"
        android:text="@string/recovery_logininfo"
        android:layout_below="@id/swch_remmemberme"
        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#DBDBDF"
        android:gravity="right"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/bmitrabold"
        android:text="@string/forgot_your_password"
        android:layout_below="@id/swch_remmemberme"
        />

    <TextView
        android:id="@+id/txt_createaccounttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/bmitrabold"
        android:textColor="#9CA0A7"
        android:layout_marginTop="10dp"
        android:text="@string/do_not_have_a_account"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/txt_createaccountclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@id/txt_createaccounttext"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/create_one"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/bmitrabold"
        android:textColor="#03A9F4"
        android:textSize="20sp" />

</RelativeLayout>

