<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="230dp"
    android:layout_gravity="center"
   android:layout_margin="8dp"
    android:elevation="20dp"
    android:background="@drawable/shaperecyclerkalaitemred"
    android:id="@+id/recyclerkalaparent">

    <TextView
        android:id="@+id/txt_titrkala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bmitra"
        android:gravity="center"
        tools:text="@string/kafsh_juma"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_namekala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_titrkala"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_toLeftOf="@id/img_flagkala"
        android:fontFamily="@font/andalus"
        tools:text="@string/juma_n51"
        android:textColor="#FFF"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/img_flagkala"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_below="@id/txt_titrkala"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/todo"
        android:layout_marginTop="5dp"
        tools:src="@drawable/iranflag" />

    <ImageView
        android:id="@+id/img_kala"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@id/txt_namekala"
        android:layout_centerHorizontal="true"
     android:layout_margin="5dp"
        android:contentDescription="@string/todo"
        tools:src="@drawable/shoes" />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_kala"
        android:fontFamily="@font/bmitrabold"
        android:gravity="left"
        android:layout_alignParentRight="true"
        tools:text="@string/price"
        android:textColor="#FFFFFF"
        android:layout_marginRight="13dp"
        android:layout_marginTop="1dp"
        android:paddingRight="4dp"
        android:textSize="20sp" />

 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_kala"
        android:fontFamily="@font/bmitrabold"
        android:gravity="center"
        android:layout_toStartOf="@id/txt_price"
        android:text="@string/toman"
        android:textColor="#FFFFFF"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:textSize="18sp" />




</RelativeLayout>