<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@drawable/shapebasketrecyclerparent"
    android:layout_margin="5dp"
    >

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_baseline_close_24"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="1dp"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/img_kala_basketactivity"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/kafsh"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="1dp"
        android:layout_below="@id/img_close"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo"
        android:elevation="3sp"/>
<TextView
    android:id="@+id/txt_titr_basketactivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:fontFamily="@font/bmitrabold"
    android:paddingRight="10dp"
    android:textColor="#3C3C3C"
    android:text="@string/kafsh_juma"
    android:layout_toStartOf="@id/img_kala_basketactivity"
    android:gravity="right"
    android:layout_marginRight="5dp"/>
<TextView
    android:id="@+id/txt_text_size_basketactivity"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:textSize="20sp"
    android:fontFamily="@font/bmitra"
    android:paddingRight="10dp"
    android:textColor="#515151"
    android:text="@string/size_t"
android:layout_alignParentBottom="true"

    android:gravity="start|center"

    android:layout_marginLeft="10dp"
   android:layout_alignParentStart="true"

    />

    <LinearLayout
        android:id="@+id/pluseminezlinear"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
android:layout_alignParentBottom="true"
       android:layout_toStartOf="@id/img_kala_basketactivity"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:background="#E1EFED"



        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_minezkala_basketactivity"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/minez"
            android:textSize="20sp"
            android:fontFamily="@font/fontdinerdotcomjazzdark"
            android:gravity="center"
            android:textColor="#454444"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_tedad_basketactivity"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="1dp"
            android:text="@string/_1"
            android:textSize="20sp"
            android:fontFamily="@font/bmitrabold"
            android:gravity="center"
            android:paddingTop="5dp"
            android:textColor="#454444"
            android:background="#F8F8F8"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="2dp"

            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_pluskala_basketactivity"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:paddingBottom="2dp"
            android:text="@string/plus"
            android:textSize="20sp"
            android:fontFamily="@font/fontdinerdotcomjazzdark"
            android:gravity="center"
            android:textColor="#454444"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_price_basketactivity"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="4dp"
       android:layout_marginTop="5sp"
        android:paddingBottom="2dp"
        android:text="@string/price"
        android:textSize="16sp"
        android:fontFamily="@font/bmitrabold"
        android:gravity="left|center"
        android:textColor="#454444"
        android:layout_toEndOf="@id/txt_toman_basketactivity"
        android:layout_toStartOf="@id/img_kala_basketactivity"
        android:layout_below="@id/txt_titr_basketactivity"
        android:layout_margin="1dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_toman_basketactivity"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5sp"
        android:paddingBottom="2dp"
        android:text="@string/toman"
        android:textSize="14sp"
        android:fontFamily="@font/bmitrabold"
        android:gravity="right|center"
        android:textColor="#454444"
        android:layout_alignParentStart="true"
       android:layout_below="@id/txt_titr_basketactivity"
        android:layout_margin="1dp"
        />
</RelativeLayout>